Refactor GTN_ItemCrate